# txb_00

./: .gitignore  CMakeLists.txt  readme.md  todo.txt
include/: AStar.h  Components.h  Core.h  Terrain.h
include/core/: Components.h  Game.h
include/systems/: Systems.h
include/utils/: AStar.h
include/world/: Area.h  AreaManager.h
lib/bearlibterminal/lib/Linux64/: SampleOmni
src/: AStar.cpp  Game.cpp  Terrain.cpp  main.cpp
src/core/: Game.cpp
src/systems/: Health.cpp  Movements.cpp  Rendering.cpp
src/utils/: AStar.cpp
src/world/: Area.cpp  AreaManager.cpp
